sass/_landing.sass
@import "variables"

body
  font-family: $main-font
  header
    position: fixed
    z-index: 22
    top: 0
    left: 0
    width: 100%
    nav.ham-nav
      background: $nav-color
      .ham-nav
        height: $header-height
        margin: 0
        padding-left: 0
      .ham-nav-toggle
        margin: 40px 0
      a.logo img
        margin: 26px 0
        box-sizing: border-box
      .ham-navigation li
        list-style-type: none
        display: inline
        .first-nav-elem
          padding-left: 15px
        a
          padding: 51px 6.5px
          box-sizing: border-box
          text-transform: uppercase
          font-size: 13px
          color: #b8b8b8
          font-weight: bold
          text-decoration: none
          display: inline-block

      span.search-button
        padding: 51px 18.5px

  main
    section.ham-home-bg
      background: no-repeat center center
      background-size: cover
      position: relative
    section.ham-home
        .slider-wrap
          min-height: 600px
          position: relative
        .home-slider-item
          background: no-repeat center center
          background-size: cover
          height: 100vh
          min-height: 600px
          position: relative
          &::after
            content: ''
            position: absolute
            left: 0
            top: 0
            width: 100%
            height: 100%
            background-color: rgba(23, 23, 23, .6)
        .centered-element
          margin-top: 40px
          font-family: $main-font
          z-index: 2
          color: white
          h2, h1
            text-transform: uppercase
            font-size: 35px
            font-weight: 700
          h2
            margin-top: 0
          h1
            font-size: 79px
          p
            color: #d4d4d4
            font-size: 34px
            font-weight: 300
          .home-buttons
            margin-top: 14vh
    section.ham-advantages
      .adv-elem
        padding-top: 95px
        min-height: 365px
        text-align: center
        margin-bottom: 0

        .adv-icon
          font-size: 80px
          margin-bottom: 30px
          transition: $transition
          &:hover
            transform: scale(1.3)
        .adv-header
          font-size: 20px
          font-weight: bold
          text-transform: uppercase
      .adv-elem:nth-child(2n)
        background-color: $primary-color
        color: #fff
      .adv-elem:nth-child(2n+1)
        background-color: $secondary-color
        color: $primary-color

    section.ham-features
      .row
        margin-left: -15px
        margin-right: -15px
        .feature-item
          padding: 0 30px
          margin-bottom: 75px
          .feature-icon
            position: relative
            bottom: -4px
            font-size: 28px
            color: $primary-color
            margin-right: 20px
          .feature-header
            transition: $transition
            white-space: nowrap
            font-size: 18px
            font-weight: bold
            color: $feature-head
            margin-bottom: 25px
            &:hover
              color: $primary-color
          .feature-decsription
            font-size: 14px
            font-weight: 300
            color: $feature-desc

